--- a/src/match-three.tex
+++ b/src/match-three.tex
@@ -49,12 +49,40 @@ Text.";
 % Outside variables
 const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
 const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
+const SCREEN_TEXT_WIDTH = 300;
 
 % Constants
+const MAX_SYMBOLS = 5;
 
 % Globals
 % The game field
 var complField = new Array();
+% Saves the symbols for the current match
+var cur_symbols = [];
+% Saves the last clicked slot
+var currentSlot = null;
+
+% Symbol array
+const ALL_SYMBOLS = [
+    0x260E, % telefon
+    0x261E, % hand white
+    0x261B, % hand black
+    0x263B, % smilie
+    0x266B, % note
+    0x2702, % scissors
+    0x2712, % pencil
+    0x2706, % telefon2
+    0x2707, % video
+    0x2708, % plane
+    0x2709, % mail
+    0x2756, % diamond
+    0x271F, % cross
+    0x2717,
+    0x274D,
+    0x2730,
+    0x2752,
+    0x271C
+];
 
 % Color data
 const COLORS = new Array(
@@ -63,9 +91,18 @@ const COLORS = new Array(
     %[ "RGB", 0.078, 0.305, 0.560 ]
 );
 
+const HIGHLIGHT_COLOR = [ "RGB", 0.984, 0.800, 0.176 ];
+
 %%%%%%%%%%
 % Helper %
 %%%%%%%%%%
+/**
+ * Returns a random number between 0 and the param.
+ * @param {Number} max The upperbound
+ */
+function getRandomInt(max) {
+    return Math.floor(Math.random() * max);
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialisation and Restart %
@@ -77,15 +114,25 @@ function initialise() {
     % Init the GUI
     initialiseButtons();
 
-    var funcName = "fieldClicked";
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
-            this.getField("pos" + x + "-" + y).setAction("MouseDown", callbackName);
-            this.getField("pos" + x + "-" + y).textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
-            this.getField("pos" + x + "-" + y).alignment = "center";
-        }
+    for (var i = 0; i < MAX_SYMBOLS; i++) {
+        cur_symbols.push(String.fromCharCode(ALL_SYMBOLS[i]));
     }
+
+    % Create the field choosing a random symbol for each field
+    var elem, rnd;
+    for (var row = 0; row < FIELD_HEIGHT; row++) {
+        var tmp = new Array();
+        for (var column = 0; column < FIELD_WIDTH; column++) {
+            rnd = getRandomInt(cur_symbols.length);
+            % UTF8 symbol and is the field removed
+            tmp.push([rnd]);
+        }
+        complField.push(tmp);
+    }
+    % Remove matches due to generation
+    cleanupField();
+    % Transform the indices in the field to symbols
+    idxToSymbol();
 
     drawAll();
 }
@@ -98,6 +145,17 @@ function initialiseButtons() {
     % Assign each button the coresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
     this.getField("restart").highlight="none";
+
+    % Each field needs to be connected to an input function
+    var funcName = "fieldClicked";
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        for (var y = 0; y < FIELD_HEIGHT; y++) {
+            var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
+            this.getField("pos" + x + "-" + y).setAction("MouseDown", callbackName);
+            this.getField("pos" + x + "-" + y).textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
+            this.getField("pos" + x + "-" + y).alignment = "center";
+        }
+    }
 
     % Info field setup
     this.getField("info").fillColor = color.transparent;
@@ -153,15 +211,121 @@ function tooltip(on) {
     }
 }
 
+%%%%%%%%%%%%%%%%%%%%
+% Field Generation %
+%%%%%%%%%%%%%%%%%%%%
+/**
+ * Remove all matches with three or more elements by iterating
+ * the field and checking if there are two slots with
+ * the same symbol directly above or infront.
+ * In that case change the symbol to one that is not in the neighbourhood.
+ * OBACHT: Does not work with MAX_SYMBOLS < 5.
+ */
+function cleanupField() {
+    % Cleanup is not possible below 5 symbols, since it would be
+    % possible that there is no replacement symbol if each
+    % neighbour is a different symbol
+    if (MAX_SYMBOLS < 5) {
+        return;
+    }
+
+    var elem;
+    for (var row = 0; row < FIELD_HEIGHT; row++) {
+        for (var column = 0; column < FIELD_WIDTH; column++) {
+            elem = complField[row][column][0];
+            if (column > 1 &&
+                complField[row][column - 1][0] == elem &&
+                complField[row][column - 2][0] == elem) {
+
+                complField[row][column][0] = getReplacementSymbol(row, column);
+                %highlight(column, row, true);
+            }
+            if (row > 1 &&
+                complField[row - 1][column][0] == elem &&
+                complField[row - 2][column][0] == elem) {
+
+                complField[row][column][0] = getReplacementSymbol(row, column);
+                %highlight(column, row, true);
+            }
+        }
+    }
+}
+
+/**
+ * Finds a replacement symbol for the given cell.
+ * The neighbourhood is checked for accurring symbols.
+ * These are ignored from the remaining symbols a
+ * random one is selected.
+ *
+ * @param {Number} row The table row.
+ * @param {Number} column The table column.
+ */
+function getReplacementSymbol(row, column) {
+    var neighbourhood = [];
+    for (var i = 0; i < MAX_SYMBOLS; i++) {
+        neighbourhood.push(true);
+    }
+
+    % Save which symbols are disallowed
+    if (column > 0) {
+        neighbourhood[complField[row][column - 1][0]] = false;
+    }
+    if (column < FIELD_WIDTH - 1) {
+        neighbourhood[complField[row][column + 1][0]] = false;
+    }
+    if (row > 0) {
+        neighbourhood[complField[row - 1][column][0]] = false;
+    }
+    if (row < FIELD_HEIGHT - 1) {
+        neighbourhood[complField[row + 1][column][0]] = false;
+    }
+    neighbourhood[complField[row][column][0]] = false;
+
+    % Save the indices of the allowed symbols
+    var indices = [];
+    for (var i = 0; i < MAX_SYMBOLS; i++) {
+        if (neighbourhood[i]) {
+            indices.push(i);
+        }
+    }
+    % Get random index
+    var rnd = getRandomInt(indices.length);
+    return indices[rnd];
+}
+
+/**
+ * Uses the indices in the field array to access the symbol table
+ * of the current playthrough and assignes the curresponding symbol
+ * to the field array.
+ */
+function idxToSymbol() {
+    for (var row = 0; row < FIELD_HEIGHT; row++) {
+        for (var column = 0; column < FIELD_WIDTH; column++) {
+            complField[row][column][0] = cur_symbols[complField[row][column][0]];
+        }
+    }
+}
+
 %%%%%%%%%%%%%
 % Gamelogic %
 %%%%%%%%%%%%%
+/**
+ * Save and highlight the last field the user clicked on.
+ * Selection is only removed after clicking on the same field.
+ *
+ * @param {Number} x The x position.
+ * @param {Number} y The y position.
+ */
 function fieldClicked(x, y) {
-    if (currentKey === null) {
-        currentKey = [x, y];
-    } else if (currentKey[0] == x && currentKey[1] == y) {
-        currentKey = null;
+    if (currentSlot === null) {
+        currentSlot = [x, y];
+        highlight(x, y, true);
+    } else if (currentSlot[0] == x && currentSlot[1] == y) {
+        currentSlot = null;
+        highlight(x, y, false);
     }
+    % Allow for multiple clicks on the same field
+    this.getField("info").setFocus();
 }
 
 %%%%%%%%%%%%%%%%%%%%%
@@ -188,7 +352,26 @@ function drawAll() {
 function draw(x, y) {
     var field = this.getField("pos" + x + "-" + y);
     field.delay = true;
-    field.value = "tmp";
+    field.value = complField[y][x][0];
+    field.delay = false;
+}
+
+/**
+ * Since only one field is updated with each input,
+ * only this field needs to be redrawn.
+ *
+ * @param {Number} x The x position.
+ * @param {Number} y The y position.
+ */
+function highlight(x, y, enable) {
+    var field = this.getField("pos" + x + "-" + y);
+    field.delay = true;
+    % Highlight the current taken move
+    if (enable) {
+        field.borderColor = HIGHLIGHT_COLOR;
+    } else {
+        field.borderColor = color.white;
+    }
     field.delay = false;
 }
 
